# lazabot_ubu

./: .gitignore  README.md  cursor_15.md  cursor_auto_push_rule.txt  docker-compose.yml  lazada_cli_bot_comprehensive_research.txt  testacc.txt
lazabot/: .dockerignore  .env.example  .eslintrc.js  CI_SETUP_SUMMARY.md  CI_TEST.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  ENCRYPTION_MODULE_SUMMARY.md  METRICS_VERIFICATION.md  README.md  README.md.backup.20251001_033959  README.md.original  STORAGE_MODULE_SUMMARY.md  customize_deployment.sh  docker-compose.yml  lazabot.service  output.txt  package-lock.json  package.json  test_encryption.rs  test_fixes.rs  test_local_deployment.sh  test_metrics.sh  verify_ci_setup.sh  verify_metrics.sh
lazabot/.github/: SECURITY.md  dependabot.yml  pull_request_template.md
lazabot/config/: config.toml.example  production_host.toml  prometheus.yml  ubuntu_host.toml
lazabot/examples/: captcha_example.rs  lazada_sg_monitor_example.rs  metrics_demo.rs  monitor_example.rs  playwright_integration.rs  products.yaml  session_demo.rs  test_database.rs
lazabot/scripts/: FINAL_SMOKE_TEST_SUMMARY.md  README_smoke_test.md  SMOKE_TEST_SUMMARY.md  browser_setup.js  demo_smoke_test.sh  deploy.sh  deploy_remote.sh  enhanced_smoke_test.sh  mock_lazada_server.js  mock_server.js  package-lock.json  package.json  playwright_server.js  rollback.sh  run_all_tests.sh  run_smoke_test.sh  setup.sh  simple_demo.sh  simple_smoke_test.sh  smoke_test.sh  smoke_test_fixed.sh  smoke_test_products.yaml  test-deployment.sh  test_deployment.sh  (+5 more)
(+72 files in other folders)
