[package]
name = "lazabot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
aes-gcm = "0.10"
base64 = "0.21"
reqwest = { version = "0.11", features = ["cookies", "json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
rand = "0.8"

# Add chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
async-trait = "0.1"
serde_json = "1.0"

# Session management dependencies
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }

# Error handling
thiserror = "1.0"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }

# Metrics server dependency
parking_lot = "0.12"

[dev-dependencies]
wiremock = "0.5"
